<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Saltlux</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="rank_of_cities">Rank of Cities</string>
    <string name="compare_cities">Compare Cities</string>
	<string name="empty"></string>
    <string name="home">Home</string>
    <string name="education">Education</string>
    <string name="environment">Environment</string>
    <string name="healthcare">Healthcare</string>
    <string name="cultural_satisfaction">Cultural Satisfaction</string>
    <string name="traffic_satisfaction">Traffic Satisfaction</string>
    <string name="details">Details</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pm10">PM10</string>
    <string name="green_spaces">Green spaces</string>
    <string name="view_by_">View by:</string>
    <string name="from_">From:</string>
    <string name="to_">To:</string>
    <string name="by_month">By Month</string>
    <string name="by_quarter">By Quarter</string>
    <string name="by_year">By Year</string>
    <string name="apply">Apply</string>
</resources>
