<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/txtCityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="5"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtCityDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/details"
            android:textColor="@color/material_blue_300"
            android:textSize="20sp" />
    </LinearLayout>

    <com.sirmamobile.saltlux.recycleview.MyRecycleView
        android:id="@+id/cityRating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llDetailsOf"
        android:layout_below="@+id/llCityName"
        android:background="@color/windowBackground"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/llDetailsOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/txtDetailsOf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/material_grey_300"
                    android:gravity="center"
                    android:text="@string/temperature" />

                <TextView
                    android:id="@+id/txtTemperatureValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/material_grey_300"
                    android:gravity="center"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/txtHumidityValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/material_grey_300"
                    android:gravity="center"
                    android:text="@string/pm10" />

                <TextView
                    android:id="@+id/txtPm10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/material_grey_300"
                    android:gravity="center"
                    android:text="@string/green_spaces" />

                <TextView
                    android:id="@+id/txtGreenSpacesValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>